--- a/Classification based on the First Original Featuring Result.ipynb
+++ b/Classification based on the First Original Featuring Result.ipynb
@@ -1900,8 +1900,342 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c57f6eea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Accuracy: 0.8318382000807559\n",
+      "Random Forest Precision: 0.8274696331140126\n",
+      "Random Forest Recall: 0.8318382000807559\n",
+      "Random Forest F1-score: 0.825212300894658\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', \n",
+    "            'aclx_n', 'acly_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = df['class'].astype(int)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "rf = RandomForestClassifier(n_estimators=20, random_state=42)\n",
+    "\n",
+    "rf.fit(X_train, Y_train)\n",
+    "\n",
+    "Y_pred = rf.predict(X_test)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "precision = precision_score(Y_test, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"Random Forest Accuracy:\", accuracy)\n",
+    "print(\"Random Forest Precision:\", precision)\n",
+    "print(\"Random Forest Recall:\", recall)\n",
+    "print(\"Random Forest F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4e3dac7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Accuracy: 0.8611779730249999\n",
+      "Decision Tree Precision: 0.8624168317546945\n",
+      "Decision Tree Recall: 0.8611779730249999\n",
+      "Decision Tree F1-score: 0.8615715543144656\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', \n",
+    "            'aclx_n', 'acly_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = (df['class'] != 0).astype(int)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.1, random_state=42)\n",
+    "\n",
+    "dt = DecisionTreeClassifier(random_state=42)\n",
+    "\n",
+    "dt.fit(X_train, Y_train)\n",
+    "\n",
+    "Y_pred = dt.predict(X_test)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "precision = precision_score(Y_test, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"Decision Tree Accuracy:\", accuracy)\n",
+    "print(\"Decision Tree Precision:\", precision)\n",
+    "print(\"Decision Tree Recall:\", recall)\n",
+    "print(\"Decision Tree F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e7d046cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive Bayes Accuracy: 0.6470707023791613\n",
+      "Naive Bayes Precision: 0.5009806097080749\n",
+      "Naive Bayes Recall: 0.6470707023791613\n",
+      "Naive Bayes F1-score: 0.5358111654526533\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', \n",
+    "            'aclx_n', 'acly_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = df['class'].astype(int)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.31, random_state=42)\n",
+    "\n",
+    "nb = GaussianNB()\n",
+    "\n",
+    "nb.fit(X_train, Y_train)\n",
+    "\n",
+    "Y_pred = nb.predict(X_test)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "precision = precision_score(Y_test, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"Naive Bayes Accuracy:\", accuracy)\n",
+    "print(\"Naive Bayes Precision:\", precision)\n",
+    "print(\"Naive Bayes Recall:\", recall)\n",
+    "print(\"Naive Bayes F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f719108b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:699: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n",
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLP Accuracy: 0.7370923466497226\n",
+      "MLP Precision: 0.6221228528862727\n",
+      "MLP Recall: 0.7370923466497226\n",
+      "MLP F1-score: 0.6618661069731178\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', \n",
+    "            'aclx_n', 'acly_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = df['class'].astype(int)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_scaled, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "mlp = MLPClassifier(hidden_layer_sizes=(100, 50), activation='relu', solver='adam', random_state=42,\n",
+    "                    max_iter=100, tol=0.001)\n",
+    "\n",
+    "mlp.fit(X_train, Y_train)\n",
+    "\n",
+    "Y_pred = mlp.predict(X_test)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "precision = precision_score(Y_test, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"MLP Accuracy:\", accuracy)\n",
+    "print(\"MLP Precision:\", precision)\n",
+    "print(\"MLP Recall:\", recall)\n",
+    "print(\"MLP F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "72f3005e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\AppData\\Roaming\\Python\\Python39\\site-packages\\keras\\src\\layers\\core\\dense.py:86: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m132s\u001b[0m 2ms/step - accuracy: 0.6650 - loss: 1.3718 - val_accuracy: 0.7086 - val_loss: 1.1670 - learning_rate: 0.0010\n",
+      "Epoch 2/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m139s\u001b[0m 2ms/step - accuracy: 0.6950 - loss: 1.2256 - val_accuracy: 0.7094 - val_loss: 1.1513 - learning_rate: 0.0010\n",
+      "Epoch 3/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m153s\u001b[0m 2ms/step - accuracy: 0.7002 - loss: 1.2124 - val_accuracy: 0.7163 - val_loss: 1.1438 - learning_rate: 0.0010\n",
+      "Epoch 4/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m152s\u001b[0m 2ms/step - accuracy: 0.7022 - loss: 1.2061 - val_accuracy: 0.7179 - val_loss: 1.1383 - learning_rate: 0.0010\n",
+      "Epoch 5/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m171s\u001b[0m 3ms/step - accuracy: 0.7037 - loss: 1.2039 - val_accuracy: 0.7184 - val_loss: 1.1357 - learning_rate: 0.0010\n",
+      "Epoch 6/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m148s\u001b[0m 2ms/step - accuracy: 0.7053 - loss: 1.1999 - val_accuracy: 0.7182 - val_loss: 1.1376 - learning_rate: 0.0010\n",
+      "Epoch 7/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m178s\u001b[0m 3ms/step - accuracy: 0.7041 - loss: 1.2040 - val_accuracy: 0.7200 - val_loss: 1.1309 - learning_rate: 0.0010\n",
+      "Epoch 8/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m152s\u001b[0m 2ms/step - accuracy: 0.7047 - loss: 1.2041 - val_accuracy: 0.7164 - val_loss: 1.1368 - learning_rate: 0.0010\n",
+      "Epoch 9/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m143s\u001b[0m 2ms/step - accuracy: 0.7044 - loss: 1.2047 - val_accuracy: 0.7196 - val_loss: 1.1336 - learning_rate: 0.0010\n",
+      "Epoch 10/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m138s\u001b[0m 2ms/step - accuracy: 0.7056 - loss: 1.2037 - val_accuracy: 0.7196 - val_loss: 1.1339 - learning_rate: 0.0010\n",
+      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 1ms/step\n",
+      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 1ms/step - accuracy: 0.7181 - loss: 1.1380\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANN Accuracy: 0.7192039489746094\n",
+      "ANN Precision: 0.5716312386218009\n",
+      "ANN Recall: 0.6983826894244102\n",
+      "ANN F1-score: 0.6192253274525824\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', \n",
+    "            'aclx_n', 'acly_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = df['class'].astype(int).values\n",
+    "Y = to_categorical(Y)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Normalizing the features\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "model = Sequential([\n",
+    "    Dense(256, input_shape=(len(features),), activation='relu'),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(128, activation='relu'),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(64, activation='relu'),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(32, activation='relu'),\n",
+    "    Dense(20, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
+    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=2, min_lr=0.001)\n",
+    "\n",
+    "model.fit(X_train, Y_train, epochs=10, batch_size=32, validation_split=0.2, callbacks=[early_stopping, reduce_lr])\n",
+    "\n",
+    "Y_pred_prob = model.predict(X_test)\n",
+    "Y_pred = (Y_pred_prob > 0.5).astype(int)\n",
+    "\n",
+    "loss, accuracy = model.evaluate(X_test, Y_test)\n",
+    "\n",
+    "Y_test = np.squeeze(Y_test)\n",
+    "Y_pred = np.squeeze(Y_pred)\n",
+    "\n",
+    "precision = precision_score(Y_test, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"ANN Accuracy:\", accuracy)\n",
+    "print(\"ANN Precision:\", precision)\n",
+    "print(\"ANN Recall:\", recall)\n",
+    "print(\"ANN F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed461b71",
    "metadata": {},
    "outputs": [],
    "source": []
