--- a/Third Method Neural Network Implementations.ipynb
+++ b/Third Method Neural Network Implementations.ipynb
@@ -1778,14 +1778,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "dfe9ed98",
-   "metadata": {},
-   "source": [
-    "From training we can see that although the overall accuracy is high, most of these training steps take longer time and much more steps."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "20db2e7c",
@@ -1925,193 +1917,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d48d00dc",
+   "cell_type": "markdown",
+   "id": "dfe9ed98",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\david\\AppData\\Roaming\\Python\\Python39\\site-packages\\keras\\src\\layers\\core\\dense.py:86: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m168s\u001b[0m 3ms/step - accuracy: 0.6816 - loss: 0.8039 - val_accuracy: 0.7352 - val_loss: 0.7224 - learning_rate: 0.0010\n",
-      "Epoch 2/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m165s\u001b[0m 3ms/step - accuracy: 0.7202 - loss: 0.7437 - val_accuracy: 0.7499 - val_loss: 0.7052 - learning_rate: 0.0010\n",
-      "Epoch 3/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m160s\u001b[0m 3ms/step - accuracy: 0.7334 - loss: 0.7287 - val_accuracy: 0.7580 - val_loss: 0.6864 - learning_rate: 0.0010\n",
-      "Epoch 4/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m150s\u001b[0m 2ms/step - accuracy: 0.7400 - loss: 0.7196 - val_accuracy: 0.7602 - val_loss: 0.6864 - learning_rate: 0.0010\n",
-      "Epoch 5/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m155s\u001b[0m 2ms/step - accuracy: 0.7425 - loss: 0.7170 - val_accuracy: 0.7625 - val_loss: 0.6798 - learning_rate: 0.0010\n",
-      "Epoch 6/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m153s\u001b[0m 2ms/step - accuracy: 0.7443 - loss: 0.7136 - val_accuracy: 0.7647 - val_loss: 0.6783 - learning_rate: 0.0010\n",
-      "Epoch 7/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m142s\u001b[0m 2ms/step - accuracy: 0.7465 - loss: 0.7115 - val_accuracy: 0.7656 - val_loss: 0.6741 - learning_rate: 0.0010\n",
-      "Epoch 8/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m152s\u001b[0m 2ms/step - accuracy: 0.7483 - loss: 0.7092 - val_accuracy: 0.7666 - val_loss: 0.6725 - learning_rate: 0.0010\n",
-      "Epoch 9/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m160s\u001b[0m 3ms/step - accuracy: 0.7491 - loss: 0.7073 - val_accuracy: 0.7692 - val_loss: 0.6683 - learning_rate: 0.0010\n",
-      "Epoch 10/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m167s\u001b[0m 3ms/step - accuracy: 0.7503 - loss: 0.7057 - val_accuracy: 0.7692 - val_loss: 0.6687 - learning_rate: 0.0010\n",
-      "Epoch 11/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m147s\u001b[0m 2ms/step - accuracy: 0.7506 - loss: 0.7056 - val_accuracy: 0.7697 - val_loss: 0.6718 - learning_rate: 0.0010\n",
-      "Epoch 12/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m193s\u001b[0m 3ms/step - accuracy: 0.7515 - loss: 0.7050 - val_accuracy: 0.7693 - val_loss: 0.6683 - learning_rate: 0.0010\n",
-      "Epoch 13/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m198s\u001b[0m 3ms/step - accuracy: 0.7516 - loss: 0.7046 - val_accuracy: 0.7688 - val_loss: 0.6695 - learning_rate: 0.0010\n",
-      "Epoch 14/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m188s\u001b[0m 3ms/step - accuracy: 0.7518 - loss: 0.7046 - val_accuracy: 0.7700 - val_loss: 0.6683 - learning_rate: 0.0010\n",
-      "Epoch 15/50\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m192s\u001b[0m 3ms/step - accuracy: 0.7517 - loss: 0.7050 - val_accuracy: 0.7713 - val_loss: 0.6652 - learning_rate: 0.0010\n",
-      "Epoch 16/50\n",
-      "\u001b[1m39390/63897\u001b[0m \u001b[32m━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━\u001b[0m \u001b[1m55s\u001b[0m 2ms/step - accuracy: 0.7518 - loss: 0.7046"
-     ]
-    }
-   ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Dropout\n",
-    "from tensorflow.keras.utils import to_categorical\n",
-    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
-    "\n",
-    "def characterize_class(value):\n",
-    "    if value == 0:\n",
-    "        return 0\n",
-    "    elif value >= 1 and value <= 12:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return 2\n",
-    "\n",
-    "features = ['posx', 'posy', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
-    "\n",
-    "X = df[features].values\n",
-    "Y = df['class'].apply(characterize_class).astype(int).values\n",
-    "Y = to_categorical(Y)\n",
-    "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Normalizing the features\n",
-    "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
-    "\n",
-    "model = Sequential([\n",
-    "    Dense(256, input_shape=(len(features),), activation='relu'),\n",
-    "    Dropout(0.7),\n",
-    "    Dense(128, activation='relu'),\n",
-    "    Dropout(0.7),\n",
-    "    Dense(64, activation='relu'),\n",
-    "    Dropout(0.7),\n",
-    "    Dense(32, activation='relu'),\n",
-    "    Dense(3, activation='softmax')\n",
-    "])\n",
-    "\n",
-    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
-    "\n",
-    "early_stopping = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
-    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=2, min_lr=0.001)\n",
-    "\n",
-    "model.fit(X_train, Y_train, epochs=50, batch_size=32, validation_split=0.2, callbacks=[early_stopping, reduce_lr])\n",
-    "\n",
-    "Y_pred_prob = model.predict(X_test)\n",
-    "Y_pred = np.argmax(Y_pred_prob, axis=1)\n",
-    "Y_test_classes = np.argmax(Y_test, axis=1)\n",
-    "\n",
-    "accuracy = accuracy_score(Y_test_classes, Y_pred)\n",
-    "precision = precision_score(Y_test_classes, Y_pred, average='weighted')\n",
-    "recall = recall_score(Y_test_classes, Y_pred, average='weighted')\n",
-    "f1 = f1_score(Y_test_classes, Y_pred, average='weighted')\n",
-    "\n",
-    "print(\"ANN Accuracy:\", accuracy)\n",
-    "print(\"ANN Precision:\", precision)\n",
-    "print(\"ANN Recall:\", recall)\n",
-    "print(\"ANN F1-score:\", f1)"
+    "From training we can see that after decreasing the dropout rate, although the overall accuracy becomes higher, most of these training steps take longer time and much more steps. Moreover, when the dropout rate is in a high level, the average epoch processing time decreases, and the precision increases."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7951f534",
+   "id": "61c82286",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Dropout\n",
-    "from tensorflow.keras.utils import to_categorical\n",
-    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
-    "\n",
-    "def characterize_class(value):\n",
-    "    if value == 0:\n",
-    "        return 0\n",
-    "    elif value >= 1 and value <= 12:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return 2\n",
-    "\n",
-    "features = ['posx', 'posy', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
-    "\n",
-    "X = df[features].values\n",
-    "Y = df['class'].apply(characterize_class).astype(int).values\n",
-    "Y = to_categorical(Y)\n",
-    "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Normalizing the features\n",
-    "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
-    "\n",
-    "model = Sequential([\n",
-    "    Dense(256, input_shape=(len(features),), activation='relu'),\n",
-    "    Dropout(0.9),\n",
-    "    Dense(128, activation='relu'),\n",
-    "    Dropout(0.9),\n",
-    "    Dense(64, activation='relu'),\n",
-    "    Dropout(0.9),\n",
-    "    Dense(32, activation='relu'),\n",
-    "    Dense(3, activation='softmax')\n",
-    "])\n",
-    "\n",
-    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
-    "\n",
-    "early_stopping = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
-    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=2, min_lr=0.001)\n",
-    "\n",
-    "model.fit(X_train, Y_train, epochs=50, batch_size=32, validation_split=0.2, callbacks=[early_stopping, reduce_lr])\n",
-    "\n",
-    "Y_pred_prob = model.predict(X_test)\n",
-    "Y_pred = np.argmax(Y_pred_prob, axis=1)\n",
-    "Y_test_classes = np.argmax(Y_test, axis=1)\n",
-    "\n",
-    "accuracy = accuracy_score(Y_test_classes, Y_pred)\n",
-    "precision = precision_score(Y_test_classes, Y_pred, average='weighted')\n",
-    "recall = recall_score(Y_test_classes, Y_pred, average='weighted')\n",
-    "f1 = f1_score(Y_test_classes, Y_pred, average='weighted')\n",
-    "\n",
-    "print(\"ANN Accuracy:\", accuracy)\n",
-    "print(\"ANN Precision:\", precision)\n",
-    "print(\"ANN Recall:\", recall)\n",
-    "print(\"ANN F1-score:\", f1)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b86f8689",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
