--- a/Classification based on the Second Original Featuring Result.ipynb
+++ b/Classification based on the Second Original Featuring Result.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "73c851ff",
    "metadata": {},
    "outputs": [
@@ -1161,8 +1161,369 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "031651a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Accuracy: 0.8770443312747863\n",
+      "Random Forest Precision: 0.8756821197468284\n",
+      "Random Forest Recall: 0.8770443312747863\n",
+      "Random Forest F1-score: 0.875217927070579\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+    "\n",
+    "def characterize_class(value):\n",
+    "    if value == 0:\n",
+    "        return 0\n",
+    "    elif value >= 1 and value <= 12:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'aclx_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = df['class'].apply(characterize_class).astype(int).values\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "rf = RandomForestClassifier(n_estimators=20, random_state=42)\n",
+    "\n",
+    "rf.fit(X_train, Y_train)\n",
+    "\n",
+    "Y_pred = rf.predict(X_test)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "precision = precision_score(Y_test, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"Random Forest Accuracy:\", accuracy)\n",
+    "print(\"Random Forest Precision:\", precision)\n",
+    "print(\"Random Forest Recall:\", recall)\n",
+    "print(\"Random Forest F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3c525038",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Accuracy: 0.8322498051527321\n",
+      "Decision Tree Precision: 0.8343664982332558\n",
+      "Decision Tree Recall: 0.8322498051527321\n",
+      "Decision Tree F1-score: 0.8331118608663234\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+    "\n",
+    "def characterize_class(value):\n",
+    "    if value == 0:\n",
+    "        return 0\n",
+    "    elif value >= 1 and value <= 12:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'aclx_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = df['class'].apply(characterize_class).astype(int).values\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "dt = DecisionTreeClassifier(random_state=42)\n",
+    "\n",
+    "dt.fit(X_train, Y_train)\n",
+    "\n",
+    "Y_pred = dt.predict(X_test)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "precision = precision_score(Y_test, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"Decision Tree Accuracy:\", accuracy)\n",
+    "print(\"Decision Tree Precision:\", precision)\n",
+    "print(\"Decision Tree Recall:\", recall)\n",
+    "print(\"Decision Tree F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4181f7c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive Bayes Accuracy: 0.6558418184492975\n",
+      "Naive Bayes Precision: 0.6164199640285972\n",
+      "Naive Bayes Recall: 0.6558418184492975\n",
+      "Naive Bayes F1-score: 0.5848392450226766\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+    "\n",
+    "def characterize_class(value):\n",
+    "    if value == 0:\n",
+    "        return 0\n",
+    "    elif value >= 1 and value <= 12:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'aclx_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = df['class'].apply(characterize_class).astype(int).values\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "nb = GaussianNB()\n",
+    "\n",
+    "nb.fit(X_train, Y_train)\n",
+    "\n",
+    "Y_pred = nb.predict(X_test)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "precision = precision_score(Y_test, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"Naive Bayes Accuracy:\", accuracy)\n",
+    "print(\"Naive Bayes Precision:\", precision)\n",
+    "print(\"Naive Bayes Recall:\", recall)\n",
+    "print(\"Naive Bayes F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "35c1d8f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:699: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLP Accuracy: 0.7682882550136002\n",
+      "MLP Precision: 0.7805252032273552\n",
+      "MLP Recall: 0.7682882550136002\n",
+      "MLP F1-score: 0.7425781760165167\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+    "\n",
+    "def characterize_class(value):\n",
+    "    if value == 0:\n",
+    "        return 0\n",
+    "    elif value >= 1 and value <= 12:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'aclx_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = df['class'].apply(characterize_class).astype(int).values\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "mlp = MLPClassifier(hidden_layer_sizes=(100, 50), activation='relu', solver='adam', random_state=42,\n",
+    "                    max_iter=100, tol=0.001)\n",
+    "\n",
+    "mlp.fit(X_train, Y_train)\n",
+    "\n",
+    "Y_pred = mlp.predict(X_test)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "precision = precision_score(Y_test, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"MLP Accuracy:\", accuracy)\n",
+    "print(\"MLP Precision:\", precision)\n",
+    "print(\"MLP Recall:\", recall)\n",
+    "print(\"MLP F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f26e77bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\AppData\\Roaming\\Python\\Python39\\site-packages\\keras\\src\\layers\\core\\dense.py:86: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m149s\u001b[0m 2ms/step - accuracy: 0.7044 - loss: 0.7609 - val_accuracy: 0.7539 - val_loss: 0.6875 - learning_rate: 0.0010\n",
+      "Epoch 2/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m154s\u001b[0m 2ms/step - accuracy: 0.7422 - loss: 0.7030 - val_accuracy: 0.7658 - val_loss: 0.6652 - learning_rate: 0.0010\n",
+      "Epoch 3/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m157s\u001b[0m 2ms/step - accuracy: 0.7509 - loss: 0.6891 - val_accuracy: 0.7674 - val_loss: 0.6584 - learning_rate: 0.0010\n",
+      "Epoch 4/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m162s\u001b[0m 3ms/step - accuracy: 0.7545 - loss: 0.6835 - val_accuracy: 0.7737 - val_loss: 0.6515 - learning_rate: 0.0010\n",
+      "Epoch 5/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m149s\u001b[0m 2ms/step - accuracy: 0.7590 - loss: 0.6767 - val_accuracy: 0.7755 - val_loss: 0.6431 - learning_rate: 0.0010\n",
+      "Epoch 6/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m171s\u001b[0m 3ms/step - accuracy: 0.7610 - loss: 0.6727 - val_accuracy: 0.7763 - val_loss: 0.6392 - learning_rate: 0.0010\n",
+      "Epoch 7/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m148s\u001b[0m 2ms/step - accuracy: 0.7632 - loss: 0.6695 - val_accuracy: 0.7789 - val_loss: 0.6363 - learning_rate: 0.0010\n",
+      "Epoch 8/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m138s\u001b[0m 2ms/step - accuracy: 0.7656 - loss: 0.6650 - val_accuracy: 0.7790 - val_loss: 0.6341 - learning_rate: 0.0010\n",
+      "Epoch 9/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m131s\u001b[0m 2ms/step - accuracy: 0.7661 - loss: 0.6641 - val_accuracy: 0.7820 - val_loss: 0.6303 - learning_rate: 0.0010\n",
+      "Epoch 10/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m110s\u001b[0m 2ms/step - accuracy: 0.7675 - loss: 0.6619 - val_accuracy: 0.7812 - val_loss: 0.6325 - learning_rate: 0.0010\n",
+      "Epoch 11/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m102s\u001b[0m 2ms/step - accuracy: 0.7682 - loss: 0.6609 - val_accuracy: 0.7833 - val_loss: 0.6257 - learning_rate: 0.0010\n",
+      "Epoch 12/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m99s\u001b[0m 2ms/step - accuracy: 0.7694 - loss: 0.6589 - val_accuracy: 0.7840 - val_loss: 0.6296 - learning_rate: 0.0010\n",
+      "Epoch 13/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m96s\u001b[0m 1ms/step - accuracy: 0.7700 - loss: 0.6576 - val_accuracy: 0.7819 - val_loss: 0.6302 - learning_rate: 0.0010\n",
+      "Epoch 14/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m95s\u001b[0m 1ms/step - accuracy: 0.7706 - loss: 0.6576 - val_accuracy: 0.7832 - val_loss: 0.6278 - learning_rate: 0.0010\n",
+      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 859us/step\n",
+      "ANN Accuracy: 0.7821623195119585\n",
+      "ANN Precision: 0.8138739003169817\n",
+      "ANN Recall: 0.7821623195119585\n",
+      "ANN F1-score: 0.7577483882683488\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
+    "\n",
+    "def characterize_class(value):\n",
+    "    if value == 0:\n",
+    "        return 0\n",
+    "    elif value >= 1 and value <= 12:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'aclx_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "\n",
+    "X = df[features].values\n",
+    "Y = df['class'].apply(characterize_class).astype(int).values\n",
+    "Y = to_categorical(Y)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Normalizing the features\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "model = Sequential([\n",
+    "    Dense(256, input_shape=(len(features),), activation='relu'),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(128, activation='relu'),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(64, activation='relu'),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(32, activation='relu'),\n",
+    "    Dense(3, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
+    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=2, min_lr=0.001)\n",
+    "\n",
+    "model.fit(X_train, Y_train, epochs=50, batch_size=32, validation_split=0.2, callbacks=[early_stopping, reduce_lr])\n",
+    "\n",
+    "Y_pred_prob = model.predict(X_test)\n",
+    "Y_pred = np.argmax(Y_pred_prob, axis=1)\n",
+    "Y_test_classes = np.argmax(Y_test, axis=1)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test_classes, Y_pred)\n",
+    "precision = precision_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"ANN Accuracy:\", accuracy)\n",
+    "print(\"ANN Precision:\", precision)\n",
+    "print(\"ANN Recall:\", recall)\n",
+    "print(\"ANN F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3ee522e",
    "metadata": {},
    "outputs": [],
    "source": []
